Minor layout fix to family container so they wrap nicely

--- a/website/templates/css/main.css
+++ b/website/templates/css/main.css
@@ -314,10 +314,11 @@ input[type=radio]:checked {
 /* family container stuff here */
 #familyContainer {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 5%;
 }
 
 .familyMemberContainer {
